# seajam2021

./: .gitattributes  Cargo.toml  README.md  sonar-project.properties
assets/models/dolphin/: dolphin.blend  dolphin.gltf
assets/models/trash/: trash.blend  trash.gltf
src/: main.rs  player.rs  rope.rs
