[package]
name = "seajam"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = { version = "0.5.0", features = ["dynamic"] }
heron = { version = "0.12.1", features = ["3d"] }
rand = "0.8"
getrandom = { version = "0.2"}
